--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dayjs": "^1.11.13",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
