--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
