--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/base": "^5.0.0-beta.69",
     "@mui/material": "^6.4.4",
     "@mui/x-date-pickers": "^7.26.0",
     "dayjs": "^1.11.13",
