--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.4",
     "@mui/x-date-pickers": "^7.26.0",
+    "@prisma/client": "^6.4.0",
     "dayjs": "^1.11.13",
     "next": "15.1.6",
     "react": "^19.0.0",
@@ -27,6 +28,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
+    "prisma": "^6.4.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
