--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@libsql/client": "^0.14.0",
     "@mui/base": "^5.0.0-beta.69",
     "@mui/material": "^6.4.4",
     "@mui/x-charts": "^7.26.0",
     "@mui/x-date-pickers": "^7.26.0",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
+    "drizzle-kit": "^0.30.4",
+    "drizzle-orm": "^0.39.3",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -31,6 +35,7 @@
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.19.3",
     "typescript": "^5"
   }
 }
