--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.4.7",
     "drizzle-kit": "^0.30.4",
     "drizzle-orm": "^0.39.3",
+    "lucide-react": "^0.479.0",
     "next": "15.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
