--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,9 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/auth/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/auth/sign-in
+
+SUPABASE_URL=
+SUPABASE_KEY=
+
+TURSO_DATABASE_URL=
+TURSO_AUTH_TOKEN=
