--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@clerk/nextjs": "^6.11.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@libsql/client": "^0.14.0",
     "@mui/base": "^5.0.0-beta.69",
     "@mui/material": "^6.4.4",
