--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "drizzle-orm": "^0.39.3",
     "lucide-react": "^0.479.0",
     "next": "15.1.6",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-pro-sidebar": "^1.1.0",
