updated student page

--- a/package.json
+++ b/package.json
@@ -24,19 +24,29 @@
     "@mui/material": "^6.4.4",
     "@mui/x-charts": "^7.26.0",
     "@mui/x-date-pickers": "^7.26.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "drizzle-kit": "^0.30.4",
     "drizzle-orm": "^0.39.3",
+    "framer-motion": "^10.16.4",
     "lucide-react": "^0.479.0",
     "next": "15.1.6",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0",
     "react": "^18.3.1",
+    "react-day-picker": "^8.9.1",
     "react-dom": "^18.3.1",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^7.1.5",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "tailwind-merge": "^2.1.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
