--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,12 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/auth/sign-in
-NEXT_PUBLIC_CLERK_SIGN_UP_URL=/auth/sign-in
-
-SUPABASE_URL=
-SUPABASE_KEY=
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/auth/sign-up
 
 TURSO_DATABASE_URL=
 TURSO_AUTH_TOKEN=
+
+PUSHER_APP_ID=
+PUSHER_APP_SECRET=
+NEXT_PUBLIC_PUSHER_APP_KEY=
+NEXT_PUBLIC_PUSHER_CLUSTER=
