--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@clerk/nextjs": "^6.11.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@fullcalendar/daygrid": "^6.1.15",
-    "@fullcalendar/interaction": "^6.1.15",
-    "@fullcalendar/react": "^6.1.15",
-    "@fullcalendar/timegrid": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
+    "@fullcalendar/react": "^6.1.19",
+    "@fullcalendar/timegrid": "^6.1.19",
     "@libsql/client": "^0.14.0",
     "@mui/base": "^5.0.0-beta.69",
     "@mui/material": "^6.4.4",
@@ -40,7 +40,7 @@
     "drizzle-orm": "^0.39.3",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.479.0",
-    "next": "15.1.6",
+    "next": "^15.5.4",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0",
     "react": "^18.3.1",
