feat: add environment-based auth control
- Replace hardcoded DISABLE_AUTH_FOR_DEV with environment variable
- Add DISABLE_AUTH_FOR_DEV to .env.example for documentation
- Allows developers to control auth locally without merge conflicts
- Auth disabled in dev via .env.local, enabled in production by default

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# 🚧 DEVELOPMENT MODE: Disable Clerk authentication for local development
+# Set to 'true' to disable auth, 'false' or remove to enable auth
+DISABLE_AUTH_FOR_DEV=false
+
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/auth/sign-in
