--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,9 @@ next-env.d.ts
 
 # temporary orchid AI code (for reference only)
 /orchid/
+
+# Documentation files (local reference only)
+CODEBASE_OVERVIEW.md
+CODE_REVIEW_GUIDE.md
+FRONTEND_REVIEW.md
+RESPONSIVENESS_GUIDE.md
